@@ -48,6 +48,7 @@
   - Add src_dir parameter to allow building outside source tree. BZ #798485
   - Apply Spanish translation update from Ismael Olea. BZ #787739
   - Added web_cfg to allow non-standard paths for rpm based web sites.
+  - Ensure xml:lang is set by XmlClean for DocBook 5 sources. BZ #696397
 
 2.6-3 Thu Jul 28 2011 
   - Force publican to use UTF8 for command line options.
